<resources>
    <string name="kilo_icon">Kilogram Icon</string>
    <string name="banana">Banana</string>
    <string name="checked_icon">Checked Icon</string>
    <string name="starting_preparation">Starting preparation</string>
    <string name="_1">1</string>
    <string name="icon_recipe">Recipe Icon</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="start_brewing">Start Brewing</string>
    <string name="recipe_icon">Recipe Icon</string>
    <string name="add_widget">Add widget</string>
    <string name="brewing_is_over">Brewing is over</string>
    <string name="see_next_step">dont giveup, see next step</string>
    <string name="recipe_pie">Nutella Pie</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous Step</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="get_latest_ingredient_recipe_here">Get latest ingredient recipe here</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="app_name">Baking App</string>
    <string name="close_button">close button</string>
</resources>
