<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardview_dialog"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/backgroundIngredients"
    android:background="@android:color/transparent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_dialog"
            android:layout_width="76dp"
            android:layout_height="68dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/recipe_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/yellow_cake" />

        <TextView
            android:id="@+id/textview_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            tools:text="@string/no_internet_connection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_dialog" />

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_retry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_dialog"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_exit"
            app:layout_constraintTop_toBottomOf="@+id/textview_dialog"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>