<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_ingredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearlayout_picture"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/backgroundIngredients"
                android:gravity="center|bottom"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/unit_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    tools:text="5"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/unit_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/kilogram"
                    android:contentDescription="@string/kilo_icon"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/unit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="Kilogram"
                    android:textColor="@color/colorTextSecondary" />


            </LinearLayout>

            <TextView
                android:id="@+id/ingredient_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                tools:text="@string/banana"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearlayout_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredient_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/padding_number_ingredient"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                tools:text="1"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ingredient_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_action_tick"
                android:contentDescription="@string/checked_icon"
                android:visibility="gone"
                android:layout_marginRight="8dp" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>